--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "dependencies": {
     "@fastify/mongodb": "^8.0.0",
     "@fastify/type-provider-typebox": "^4.1.0",
+    "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "fastify-mongodb": "^4.2.0",
+    "mongoose": "^8.6.1",
     "nodemon": "^3.1.4"
   },
   "devDependencies": {
