--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@fastify/cors": "^9.0.1",
     "@fastify/mongodb": "^8.0.0",
     "@fastify/type-provider-typebox": "^4.1.0",
     "axios": "^1.7.7",
@@ -9,6 +10,7 @@
     "nodemon": "^3.1.4"
   },
   "devDependencies": {
+    "@types/fastify-cors": "^0.1.0",
     "@types/node": "^22.5.4",
     "fastify": "^4.28.1",
     "ts-node": "^10.9.2",
