--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
     "@fastify/cors": "^9.0.1",
     "@fastify/mongodb": "^8.0.0",
     "@fastify/type-provider-typebox": "^4.1.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.6",
     "axios": "^1.7.7",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "fastify-mongodb": "^4.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.1",
     "nodemon": "^3.1.4"
   },
