--- a/package.json
+++ b/package.json
@@ -1,25 +1,27 @@
 {
   "dependencies": {
-    "@fastify/cors": "^9.0.1",
-    "@fastify/mongodb": "^8.0.0",
-    "@fastify/type-provider-typebox": "^4.1.0",
+    "@fastify/cors": "^8.3.0",
+    "@fastify/mongodb": "^7.0.0",
+    "@fastify/multipart": "^7.7.3",
+    "@fastify/type-provider-typebox": "^3.5.0",
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.6",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
-    "fastify-mongodb": "^4.2.0",
+    "fastify": "^4.24.0",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.1",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "slugify": "^1.6.6",
+    "tap": "^20.0.3"
   },
   "devDependencies": {
-    "@types/fastify-cors": "^0.1.0",
-    "@types/node": "^22.5.4",
-    "fastify": "^4.28.1",
+    "@types/node": "^20.16.5",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.5.4"
+    "typescript": "^5.2.2"
   },
   "name": "movie-backend",
   "description": "",
